--- a/frontend/nba-odds-frontend/package.json
+++ b/frontend/nba-odds-frontend/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.13.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-is": "^19.2.4",
+    "react-router-dom": "^7.13.0",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
